--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Погнали</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Погнали!</title>
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="page-header">
+    <span class="page-header__text-logo">Погнали?</span>
+    <a class="page-header__logo visually-hidden">
+      <img src="img/logo.svg" width="226" height="30" alt="Погнали?">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="companions.html">Попутчики</a>
+          </li>
+        </ul>
+        <div class="main-nav__list user-list">
+          <a class="user-list__authorization button" href="authorization.html">
+            <span class="user-list__caption">АВТОРИЗАЦИЯ</span>
+          </a>
+        </div>
+        <dl class="main-nav__list contact-list">
+          <div class="contact-list__item">
+            <dt class="contact-list__phone">
+              <a class="icon icon--dark-theme icon--phone">Позвоните нам</a>
+            </dt>
+            <dd class="contact-list__details">8 800 555-86-28</dd>
+          </div>
+          <div class="contact-list__item">
+            <dt class="contact-list__email">
+              <a class="icon icon--dark-theme icon--email">Напишите нам</a>
+            </dt>
+            <dd class="contact-list__details">MAIL@HTMLACADEMY.RU</dd>
+          </div>
+        </dl>
+        <ul class="main-nav__list social-list">
+          <li class="social-list__item">
+            <a class="social-list__link icon icon--light-theme icon--facebook"
+              href="https://www.facebook.com/htmlacademy">Мы в
+              Фейсбуке</a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link icon icon--light-theme icon--vkontakte" href="https://vk.com/htmlacademy">Мы в
+              Вконтакте</a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link icon icon--light-theme icon--instagram"
+              href="https://www.instagram.com/htmlacademy">Мы в
+              Инстаграме</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+</body>
+
 </html>
