--- a/source/index.html
+++ b/source/index.html
@@ -114,6 +114,16 @@
         </ol>
       </div>
     </section>
+    <section class="about">
+      <h2 class="about__caption">О сервисе</h2>
+      <p class="about__description">
+        Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
+        черпайте вдохновение в чужих.
+      </p>
+      <p>
+        <b class="about__appeal">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</b>
+      </p>
+    </section>
   </main>
 </body>
 
