--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <div class="main-nav__wrapper">
+      <div class="wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
@@ -69,7 +69,7 @@
   <main class="page-main">
     <h1 class="visually-hidden">Погнали - лучший сайт для поиска попутчиков!</h1>
     <section class="promo">
-      <div class="promo__wrapper">
+      <div class="wrapper">
         <header class="promo__header">
           <h2 class="promo__slogan">В путешествие с крутыми попутчиками!</h2>
           <div class="promo__traveller-illustration">
@@ -115,14 +115,16 @@
       </div>
     </section>
     <section class="about">
-      <h2 class="about__caption">О сервисе</h2>
-      <p class="about__description">
-        Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
-        черпайте вдохновение в чужих.
-      </p>
-      <p>
-        <b class="about__appeal">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</b>
-      </p>
+      <div class="wrapper">
+        <h2 class="about__caption">О сервисе</h2>
+        <p class="about__description">
+          Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
+          черпайте вдохновение в чужих.
+        </p>
+        <p>
+          <b class="about__appeal">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</b>
+        </p>
+      </div>
     </section>
   </main>
 </body>
