added countries block. added some images

--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,7 @@
               <a class="contact-list__link icon icon--main-theme icon--email">Напишите нам</a>
             </li>
           </ul>
-          <div class="promo user-list">
+          <div class="promo__list user-list">
             <a class="user-list__authorization button" href="authorization.html">
               <span class="user-list__caption">АВТОРИЗАЦИЯ</span>
             </a>
@@ -92,11 +92,6 @@
         <blockquote class="promo__review">
           <q class="review__text">Лучшее приложение, <br> что я видел в жизни!</q>
           <p class="review__author-info">Мурат Эльтазин главный редактор газеты <q>гаджет лайф</q></p>
-          <!-- <img class="reviews__author-image" src="img/picture-travis-mobile@1x.jpg" width="50" height="33" alt="Фото Трэвиса Баркера">
-          <div class="reviews__author-info">
-            <cite class="reviews__author-name">Трэвис Баркер</cite>
-            <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
-          </div> -->
         </blockquote>
         <ol class="promo__list opportunities-list">
           <li class="opportunities-list__item opportunities-list__item--dark-theme">
@@ -117,13 +112,38 @@
     <section class="about">
       <div class="wrapper">
         <h2 class="about__caption">О сервисе</h2>
-        <p class="about__description">
+        <p class="about__info">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
           черпайте вдохновение в чужих.
         </p>
         <p>
           <b class="about__appeal">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</b>
         </p>
+      </div>
+    </section>
+    <section class="countries">
+      <div class="wrapper">
+        <header class="countries__header">
+          <h2 class="visually-hidden">Направления для путешествий по всему свету!</h2>
+          <p class="countries__info">
+            Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем
+            можно там заняться.
+          </p>
+        </header>
+        <ul class="countries-list">
+          <li class="countries-list__item">
+            <a class="countries-list__link countries-list__link--thailand">
+              <dl class="countries-list visits-list">
+                <div class="visits-list__item">
+                  <dt class="visits-list__country">
+                    Тайланд
+                  </dt>
+                  <dd class="visits-list__count">18321</dd>
+                </div>
+              </dl>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
