added profile block

--- a/source/index.html
+++ b/source/index.html
@@ -192,13 +192,13 @@
             </div>
           </li>
         </ul>
-        <a class="countries__all-countries button button--arrow " href="allcountries.html">Показать все</a>
+        <a class="countries__all-countries button button--arrow" href="allcountries.html">Показать все</a>
       </div>
     </section>
     <section class="users">
       <div class="wrapper">
         <header class="users__header">
-          <h2 users__caption>
+          <h2 class="users__caption">
             Попутчики
           </h2>
           <p class="users_info">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и
@@ -280,33 +280,34 @@
             </div>
           </li>
         </ul>
-        <a class="countries__all-countries button button--arrow " href="allcountries.html">Показать все</a>
+        <a class="countries__all-countries button button--arrow" href="allcountries.html">Показать все</a>
       </div>
     </section>
-    <sction class="profile">
-      <header class="profile__header">
-        <h2 class="header__caption">Добавьте свой профиль</h2>
-        <img src="img/rates.svg" />
-      </header>
-      <ol class="profile__price-list">
+    <section class="profile">
+      <div class="wrapper">
+        <header class="profile__header">
+          <h2 class="header__caption">Добавьте свой профиль</h2>
+          <img src="img/rates.svg" alt="Тарифы" />
+        </header>
+        <ol class="profile__information-list">
+          <li
+            class="information-list__item information-list__item--transparent-theme information-list__item--digital-dark-theme">
+            Базовое размещение бесплатно
+          </li>
+          <li
+            class="information-list__item information-list__item--transparent-theme information-list__item--digital-middle-theme">
+            Вывод на первых позициях <br>99 руб./мес
+          </li>
+          <li
+            class="information-list__item information-list__item--transparent-theme information-list__item--digital-light-theme">
+            Кастомный цвет карточки <br>59 руб./мес
+          </li>
+        </ol>
+        <a class="profile__business-tarifs button button--arrow" href="businesstarifs.html">Показать тарифы для
+          бизнеса</a>
+      </div>
+    </section>
 
-      </ol>
-
-      <!-- <ol class="promo__list information-list">
-        <li class="information-list__item information-list__item--dark-theme">
-          Выберите направление
-        </li>
-        <li class="information-list__item information-list__item--middle-theme">
-          Изучите идеи путешественников
-        </li>
-        <li class="information-list__item information-list__item--light-theme">
-          Находите тех, кто похож на вас
-        </li>
-        <li class="information-list__item information-list__item--even-lighter-theme">
-          Путешествуйте вместе!
-        </li>
-      </ol> -->
-    </sction>
   </main>
 </body>
 
