added feedback block

--- a/source/index.html
+++ b/source/index.html
@@ -307,7 +307,36 @@
           бизнеса</a>
       </div>
     </section>
-
+    <section class="feedback">
+      <div class="wrapper">
+        <header class="feedback__header">
+          <h2 class="feedback__caption">Заинтересовались?</h2>
+          <p class="feedback__info">
+            Зарегистрируйтесь, это быстро и бесплатно! Уже зарегистрированы? Тогда скорее
+            <a class="feedback__authorisation-link">авторизуйтесь</a>.
+          </p>
+        </header>
+        <input type="email" class="feedback__email button button--arrow" />
+        <p class="feedback__any-questions">
+          Остались вопросы?<br>
+          Мы с радостью на них ответим!
+        </p>
+        <dl class="feedback__list icon-list">
+          <div class="icon-list__item">
+            <dt class="icon-list__phone">
+              <a class="icon-list__link icon icon--dark-theme icon--home-phone">Позвоните нам</a>
+            </dt>
+            <dd class="icon-list__details">8 800 555-86-28</dd>
+          </div>
+          <div class="icon-list__item">
+            <dt class="icon-list__email">
+              <a class="icon-list__link icon icon--dark-theme icon--mail">Напишите нам</a>
+            </dt>
+            <dd class="icon-list__details">MAIL@HTMLACADEMY.RU</dd>
+          </div>
+        </dl>
+      </div>
+    </section>
   </main>
 </body>
 
