--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <div class="wrapper">
+      <div class="container">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
@@ -69,7 +69,7 @@
   <main class="page-main">
     <h1 class="visually-hidden">Погнали - лучший сайт для поиска попутчиков!</h1>
     <section class="promo">
-      <div class="wrapper">
+      <div class="container">
         <header class="promo__header">
           <h2 class="promo__slogan">В путешествие с крутыми попутчиками!</h2>
           <div class="promo__traveller-illustration">
@@ -110,7 +110,7 @@
       </div>
     </section>
     <section class="about">
-      <div class="wrapper">
+      <div class="container">
         <h2 class="about__caption">О сервисе</h2>
         <p class="about__info">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
@@ -122,7 +122,7 @@
       </div>
     </section>
     <section class="countries">
-      <div class="wrapper">
+      <div class="container">
         <header class="countries__header">
           <h2 class="visually-hidden">Направления для путешествий по всему свету!</h2>
           <p class="countries__info">
@@ -196,7 +196,7 @@
       </div>
     </section>
     <section class="users">
-      <div class="wrapper">
+      <div class="container">
         <header class="users__header">
           <h2 class="users__caption">
             Попутчики
@@ -284,7 +284,7 @@
       </div>
     </section>
     <section class="profile">
-      <div class="wrapper">
+      <div class="container">
         <header class="profile__header">
           <h2 class="header__caption">Добавьте свой профиль</h2>
           <img src="img/rates.svg" alt="Тарифы" />
@@ -308,7 +308,7 @@
       </div>
     </section>
     <section class="feedback">
-      <div class="wrapper">
+      <div class="container">
         <header class="feedback__header">
           <h2 class="feedback__caption">Заинтересовались?</h2>
           <p class="feedback__info">
@@ -338,7 +338,7 @@
       </div>
     </section>
     <section class="contacts">
-      <div class="wrapper">
+      <div class="container">
         <header class="contacts__header">
           <h2 class="visually-hidden">Контакты компании!</h2>
           <dl class="contacts__list icon-list">
@@ -354,7 +354,7 @@
       </div>
     </section>
     <footer class="page-footer">
-      <div class="wrapper">
+      <div class="container">
         <h2 class="page-footer__caption">Погнали?</h2>
         <ul class="page-footer__list social-list">
           <li class="social-list__item">
