changed tag p to ul for hashtags in the card lists

--- a/source/index.html
+++ b/source/index.html
@@ -223,7 +223,26 @@
                 <blockquote class="card-list__item">
                   <div class="card-list__user-info">
                     <cite class="card-list__user-name">Таня Фирсова</cite>
-                    <p class="card-list__text">#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
+                    <ul class="card-list hashtag-list">
+                      <li class="hashtag-list__item">
+                        #ЗОЖ
+                      </li>
+                      <li class="hashtag-list__item">
+                        #ПП
+                      </li>
+                      <li class="hashtag-list__item">
+                        #Фитнес
+                      </li>
+                      <li class="hashtag-list__item">
+                        #пляж
+                      </li>
+                      <li class="hashtag-list__item">
+                        #авокадо
+                      </li>
+                      <li class="hashtag-list__item">
+                        #смузи
+                      </li>
+                    </ul>
                   </div>
                 </blockquote>
                 <ul class="card-list icon-list">
@@ -258,7 +277,23 @@
                 <blockquote class="card-list__item">
                   <div class="card-list__user-info">
                     <cite class="card-list__user-name">Петя Демин</cite>
-                    <p class="card-list__text">#бурге #бар #футбол #концерт #крафт</p>
+                    <ul class="card-list hashtag-list">
+                      <li class="hashtag-list__item">
+                        #бурге
+                      </li>
+                      <li class="hashtag-list__item">
+                        #бар
+                      </li>
+                      <li class="hashtag-list__item">
+                        #футбол
+                      </li>
+                      <li class="hashtag-list__item">
+                        #концерт
+                      </li>
+                      <li class="hashtag-list__item">
+                        #крафт
+                      </li>
+                    </ul>
                   </div>
                 </blockquote>
                 <ul class="card-list icon-list">
