--- a/source/forms/directions.html
+++ b/source/forms/directions.html
@@ -9,7 +9,64 @@
 
 <body class="page__body">
   <header class="page-header">
-
+    <span class="page-header__text-logo">Погнали?</span>
+    <a class="page-header__logo visually-hidden">
+      <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="container">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="companions.html">Попутчики</a>
+          </li>
+        </ul>
+        <div class="main-nav__list user-list">
+          <a class="user-list__authorization button" href="authorization.html">
+            <span class="user-list__caption">АВТОРИЗАЦИЯ</span>
+          </a>
+        </div>
+        <dl class="main-nav__list icon-list">
+          <div class="icon-list__item">
+            <dt class="icon-list__phone">
+              <span class="icon-list__link icon icon--dark-theme icon--home-phone">Позвоните нам</span>
+            </dt>
+            <dd class="icon-list__details">8 800 555-86-28</dd>
+          </div>
+          <div class="icon-list__item">
+            <dt class="icon-list__email">
+              <span class="icon-list__link icon icon--dark-theme icon--mail">Напишите нам</span>
+            </dt>
+            <dd class="icon-list__details">MAIL@HTMLACADEMY.RU</dd>
+          </div>
+        </dl>
+        <ul class="main-nav__list social-list">
+          <li class="social-list__item">
+            <a class="social-list__link icon icon--light-theme icon--facebook"
+              href="https://www.facebook.com/htmlacademy">Мы в
+              Фейсбуке</a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link icon icon--light-theme icon--vkontakte" href="https://vk.com/htmlacademy">Мы в
+              Вконтакте</a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link icon icon--light-theme icon--instagram"
+              href="https://www.instagram.com/htmlacademy">Мы в
+              Инстаграме</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <spn class="page-header__caption">Направления</spn>
   </header>
   <main class="page-main">
 
