--- a/source/forms/directions.html
+++ b/source/forms/directions.html
@@ -9,6 +9,10 @@
 
 <body class="page__body">
   <header class="page-header">
+    <span class="page-header__text-logo">Погнали?</span>
+    <a class="page-header__logo visually-hidden">
+      <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
+    </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
@@ -62,6 +66,7 @@
         </ul>
       </div>
     </nav>
+    <span class="page-header__caption">Направления</span>
   </header>
   <main class="page-main">
 
