--- a/source/index.html
+++ b/source/index.html
@@ -279,7 +279,7 @@
                     <cite class="card-list__user-name">Петя Демин</cite>
                     <ul class="card-list hashtag-list">
                       <li class="hashtag-list__item">
-                        #бурге
+                        #бургер
                       </li>
                       <li class="hashtag-list__item">
                         #бар
