added user plans fieldset

--- a/source/forms/directions.html
+++ b/source/forms/directions.html
@@ -92,6 +92,60 @@
           </p>
         </fieldset>
       </fieldset>
+      <fieldset class="user-plans">
+        <ol class="card-list plan-list">
+          <li class="plan-list__item">
+            <ul class="plan-list country">
+              <li class="country__item">
+                Франция
+              </li>
+              <li class="country__item">
+                Италия
+              </li>
+            </ul>
+            <dl class="plan-list info-list">
+              <div class="info-list__item">
+                <dt class="info-list__companions-count">
+                  3
+                </dt>
+                <dd class="info-list__details">Попутчика</dd>
+              </div>
+              <div class="info-list__item">
+                <dt class="info-list__dates">
+                  26 МАР
+                </dt>
+                <dd class="info-list__dates-details">- 29 МАР</dd>
+              </div>
+            </dl>
+            <a class="plan-list button button_change">ИЗМЕНИТЬ</a>
+          </li>
+          <li class="plan-list__item">
+            <ul class="plan-list country">
+              <li class="country__item">
+                Тайланд
+              </li>
+              <li class="country__item">
+                Индонезия
+              </li>
+            </ul>
+            <dl class="plan-list info-list">
+              <div class="info-list__item">
+                <dt class="info-list__companions-count">
+                  1
+                </dt>
+                <dd class="info-list__details">Попутчик</dd>
+              </div>
+              <div class="info-list__item">
+                <dt class="info-list__dates">
+                  1 ИЮЛ
+                </dt>
+                <dd class="info-list__dates-details">- 15 ИЮЛ</dd>
+              </div>
+            </dl>
+            <a class="plan-list button button_change">ИЗМЕНИТЬ</a>
+          </li>
+        </ol>
+      </fieldset>
     </form>
   </main>
   <footer>
